--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "match-sorter": "^7.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-rating": "^2.0.5",
+    "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.27.0",
     "sort-by": "^1.2.0"
   },
