--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-rating": "^2.0.5",
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.27.0",
+    "recharts": "^2.13.3",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
